[Build] Use Jacoco for code coverage
Cobertura does not work with Java 8.